# iso8601-duration

./: .travis.yml  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: test.yml
src/: chrono.rs  duration.rs  lib.rs  serde.rs
