[package]
name = "iso8601-duration"
version = "0.1.0"
authors = ["PoiScript <poiscript@gmail.com>"]
description = "Parse ISO8601 duration format."
repository = "https://github.com/PoiScript/iso8601-duration"
readme = "README.md"
edition = "2018"
license = "MIT"
keywords = ["iso8601", "duration", "parser"]

[package.metadata.docs.rs]
all-features = true

[badges]
travis-ci = { repository = "PoiScript/iso8601-duration" }

[dependencies]
nom = "7"
chrono = { version = "0.4", optional = true }
serde = { version = "1", optional = true }

[features]
default = []

[dev-dependencies]
serde_json = "1"
